--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap");
 
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Nanum Gothic Coding", monospace;
 }
 
 body {
